# cpu_temperature_diagnostics-release

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  azure-pipeline.yml  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/cpu_temperature_diagnostics/: cpu_temperature_diagnostic.hh  sensor_chip.hh  temperature_feature.hh
launch/: cpu_temperature_diagnostics.launch
src/: cpu_temperature_diagnostic.cc  main.cc  sensor_chip.cc  temperature_feature.cc
