<?xml version="1.0"?>
<package format="2">
  <name>cpu_temperature_diagnostics</name>
  <version>0.0.1</version>
  <description>Collect and diagnose cpu temperature informations</description>

  <maintainer email="thomas.kostas@ascent.ai">Thomas Kostas</maintainer>

  <license>(c) Ascent Robotics Inc. All rights reserved.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>diagnostic_updater</depend>
  <depend>libsensors4-dev</depend>

</package>
